Added option on team dashboard to switch color-coding of bubbles.

--- a/initiative_dashboard.html
+++ b/initiative_dashboard.html
@@ -397,6 +397,7 @@
             this.add({
               xtype: 'rallycombobox',
               itemId: 'graph_select',
+              fieldLabel: 'Y-axis:',
               store: ['Total points', 'Total stories/defects'],
               listeners: { change: {
                 fn: that.change_graph_type.bind(that)
