--- a/all_work_dashboard.html
+++ b/all_work_dashboard.html
@@ -195,6 +195,7 @@
             this.add({
               xtype: 'rallycombobox',
               itemId: 'artifact_select',
+              fieldLabel: 'Y-axis:',
               store: ['Just stories', 'Just defects', 'Both'],
               listeners: {
                 change: {
