--- a/feature_dashboard.html
+++ b/feature_dashboard.html
@@ -402,6 +402,7 @@
             this.add({
               xtype: 'rallycombobox',
               itemId: 'graph_select',
+              fieldLabel: 'Y-axis:',
               store: ['Total points', 'Total stories/defects'],
               listeners: { change: {
                 fn: that.change_graph_type.bind(that)
