--- a/weekly_throughput_dashboard.html
+++ b/weekly_throughput_dashboard.html
@@ -104,7 +104,7 @@
             this.add({
               xtype: 'rallycombobox',
               itemId: 'mode_select',
-              fieldLabel: 'Y-axis:',
+              fieldLabel: 'Combine stories & defects?',
               store: ['Separate', 'Combined'],
               listeners: { change: {
                 fn: that.change_graph_mode.bind(that)
