Basic dashboard selection.

--- a/dashboard_template.html
+++ b/dashboard_template.html
@@ -16,6 +16,34 @@
         }
       }
 
+      function load_menu() {
+        var b = document.getElementById("the_body");
+        b.innerHTML = "<div> \
+          <ul> \
+            <li><a  \
+              href=\"javascript:void(0)\"  \
+              onclick=\"Rally.launchApp('ZzacksTeamDashboardApp')\" \
+            >Team Dashboard</a></li> \
+            <li><a  \
+              href=\"javascript:void(0)\"  \
+              onclick=\"Rally.launchApp('ZzacksFeatureDashboardApp')\" \
+            >Feature Dashboard</a></li> \
+            <li><a  \
+              href=\"javascript:void(0)\"  \
+              onclick=\"Rally.launchApp('ZzacksInitiativeDashboardApp')\" \
+            >Initiative Dashboard</a></li> \
+            <li><a  \
+              href=\"javascript:void(0)\"  \
+              onclick=\"Rally.launchApp('ZzacksAllWorkDashboardApp')\" \
+            >All Work Dashboard</a></li> \
+            <li><a  \
+              href=\"javascript:void(0)\"  \
+              onclick=\"Rally.launchApp('ZzacksWeeklyThroughputDashboardApp')\" \
+            >Weekly Throughput Dashboard</a></li> \
+          </ul> \
+        </div>";
+      }
+
       Rally.onReady(function () {
         <!-- put the things here -->
       });
@@ -58,30 +86,6 @@
       }
     </style>
   </head>
-  <body>
-    <div>
-      <ul>
-        <li><a 
-          href="javascript:void(0)" 
-          onclick="Rally.launchApp('ZzacksTeamDashboardApp')"
-        >Team Dashboard</a></li>
-        <li><a 
-          href="javascript:void(0)" 
-          onclick="Rally.launchApp('ZzacksFeatureDashboardApp')"
-        >Feature Dashboard</a></li>
-        <li><a 
-          href="javascript:void(0)" 
-          onclick="Rally.launchApp('ZzacksInitiativeDashboardApp')"
-        >Initiative Dashboard</a></li>
-        <li><a 
-          href="javascript:void(0)" 
-          onclick="Rally.launchApp('ZzacksAllWorkDashboardApp')"
-        >All Work Dashboard</a></li>
-        <li><a 
-          href="javascript:void(0)" 
-          onclick="Rally.launchApp('ZzacksWeeklyThroughputDashboardApp')"
-        >Weekly Throughput Dashboard</a></li>
-      </ul>
-    </div>
+  <body id="the_body" onload="load_menu()">
   </body>
 </html>
