--- a/program_dashboard_template.html
+++ b/program_dashboard_template.html
@@ -18,30 +18,11 @@
 
       function load_menu() {
         var b = document.getElementById("the_body");
-        b.innerHTML = "<div> \
-          <ul> \
-            <li><a  \
-              href=\"javascript:void(0)\"  \
-              onclick=\"Rally.launchApp('ZzacksFeatureDashboardApp')\" \
-            >Feature Dashboard</a></li> \
-            <li><a  \
-              href=\"javascript:void(0)\"  \
-              onclick=\"Rally.launchApp('ZzacksInitiativeDashboardApp')\" \
-            >Initiative Dashboard</a></li> \
-            <li><a  \
-              href=\"javascript:void(0)\"  \
-              onclick=\"Rally.launchApp('ZzacksAllWorkDashboardApp')\" \
-            >All Work Dashboard</a></li> \
-            <li><a  \
-              href=\"javascript:void(0)\"  \
-              onclick=\"Rally.launchApp('ZzacksWeeklyThroughputDashboardApp')\" \
-            >Weekly Throughput Dashboard</a></li> \
-          </ul> \
-        </div>";
+        b.innerHTML = "<!-- put the menu here -->";
       }
 
       Rally.onReady(function () {
-        <!-- put the things here -->
+        <!-- put the dashboards here -->
       });
     </script>
 
