Adding tables with descriptions to dashboard landing pages.

--- a/menus/program.html
+++ b/menus/program.html
@@ -1,20 +1,44 @@
 <div> 
-  <ul> 
-    <li><a  
-      href="javascript:void(0)"  
-      onclick="Rally.launchApp('ZzacksFeatureDashboardApp')" 
-    >Feature Dashboard</a></li> 
-    <li><a  
-      href="javascript:void(0)"  
-      onclick="Rally.launchApp('ZzacksInitiativeDashboardApp')" 
-    >Initiative Dashboard</a></li> 
-    <li><a  
-      href="javascript:void(0)"  
-      onclick="Rally.launchApp('ZzacksAllWorkDashboardApp')" 
-    >All Work Dashboard</a></li> 
-    <li><a  
-      href="javascript:void(0)"  
-      onclick="Rally.launchApp('ZzacksWeeklyThroughputDashboardApp')" 
-    >Weekly Throughput Dashboard</a></li> 
-  </ul> 
+  <table class="center">
+    <tr>
+      <td class="tablecell"><a  
+        href="javascript:void(0)"  
+        onclick="Rally.launchApp('ZzacksFeatureDashboardApp')" 
+      >Feature Dashboard</a></td>
+      <td class="tablecell">
+        This page's graph shows the progress of committed work over each quarter that it considers. The planned feature work and the released feature work are both plotted over time, so that the current quarter's progress can be compared to previous quarters.
+        <br />
+        <strong>Warning: This graph takes a long time to compute!</strong>
+      </td>
+    </tr>
+    <tr>
+      <td class="tablecell"><a  
+        href="javascript:void(0)"  
+        onclick="Rally.launchApp('ZzacksInitiativeDashboardApp')" 
+      >Initiative Dashboard</a></td>
+      <td class="tablecell">
+        This page's graph shows the progress of work committed towards a single initiative, which can be selected in the app's settings. The planned feature work and released feature work are both plotted over time for the selected quarter.
+      </td>
+    </tr>
+    <tr>
+      <td class="tablecell"><a  
+        href="javascript:void(0)"  
+        onclick="Rally.launchApp('ZzacksAllWorkDashboardApp')" 
+      >All Work Dashboard</a></td>
+      <td class="tablecell">
+        This page's graph shows the progress of all work completed in each of the quarters that it considers. All work (whether it was planned feature work or not) is included; so long as it is completed during the quarter's timebox, it is featured on the graph.
+        <br />
+        <strong>Warning: This graph takes a long time to compute!</strong>
+      </td>
+    </tr>
+    <tr>
+      <td class="tablecell"><a  
+        href="javascript:void(0)"  
+        onclick="Rally.launchApp('ZzacksWeeklyThroughputDashboardApp')" 
+      >Weekly Throughput Dashboard</a></td>
+      <td class="tablecell">
+        This page's graph shows the number of artifacts that are completed each week for the trailing 52 weeks. Stories and defects can be counted separately, or added together into one data series.
+      </td>
+    </tr>
+  </table>
 </div>
