Basic cumulative work chart.

--- a/menus/team.html
+++ b/menus/team.html
@@ -12,6 +12,15 @@
     <tr>
       <td class="tablecell"><a
         href="javascript:void(0)\"
+        onclick="Rally.launchApp('ZzacksCumulativeWorkDashboardApp')"
+      >Cumulative Work Dashboard</a></td>
+      <td class="tablecell">
+        Description
+      </td>
+    </tr>
+    <tr>
+      <td class="tablecell"><a
+        href="javascript:void(0)\"
         onclick="Rally.launchApp('ZzacksAllWorkDashboardApp')"
       >All Work Dashboard</a></td>
       <td class="tablecell">
