Bug fix on initiative dashboard.

--- a/menus/team.html
+++ b/menus/team.html
@@ -15,7 +15,7 @@
         onclick="Rally.launchApp('ZzacksCumulativeWorkDashboardApp')"
       >Cumulative Work Dashboard</a></td>
       <td class="tablecell">
-        Description
+        WIP
       </td>
     </tr>
     <tr>
