Basic scope change dashboard.

--- a/menus/program.html
+++ b/menus/program.html
@@ -40,5 +40,14 @@
         This page's graph shows the number of artifacts that are completed each week for the trailing 52 weeks. Stories and defects can be counted separately, or added together into one data series.
       </td>
     </tr>
+    <tr>
+      <td class="tablecell"><a  
+        href="javascript:void(0)"  
+        onclick="Rally.launchApp('ZzacksScopeChangeDashboardApp')" 
+      >Scope Change Dashboard</a></td>
+      <td class="tablecell">
+        WIP
+      </td>
+    </tr>
   </table>
 </div>
