About to remove caching from the initiative dashboard. May God have mercy on my soul.

--- a/menus/program.html
+++ b/menus/program.html
@@ -14,7 +14,7 @@
     <tr>
       <td class="tablecell"><a  
         href="javascript:void(0)"  
-        onclick="Rally.launchApp('ZzacksInitiativeDashboardApp')" 
+        onclick="launch_app('ZzacksInitiativeDashboardApp')" 
       >Initiative Dashboard</a></td>
       <td class="tablecell">
         This page's graph shows the progress of work committed towards a single initiative, which can be selected in the app's settings. The planned feature work and released feature work are both plotted over time for the selected quarter.
