--- a/menus/program.html
+++ b/menus/program.html
@@ -3,7 +3,7 @@
     <tr>
       <td class="tablecell"><a  
         href="javascript:void(0)"  
-        onclick="Rally.launchApp('ZzacksFeatureDashboardApp')" 
+        onclick="launch_app('ZzacksFeatureDashboardApp')" 
       >Feature Dashboard</a></td>
       <td class="tablecell">
         This page's graph shows the progress of committed work over each quarter that it considers. The planned feature work and the released feature work are both plotted over time, so that the current quarter's progress can be compared to previous quarters.
@@ -23,7 +23,7 @@
     <tr>
       <td class="tablecell"><a  
         href="javascript:void(0)"  
-        onclick="Rally.launchApp('ZzacksAllWorkDashboardApp')" 
+        onclick="launch_app('ZzacksAllWorkDashboardApp')" 
       >All Work Dashboard</a></td>
       <td class="tablecell">
         This page's graph shows the progress of all work completed in each of the quarters that it considers. All work (whether it was planned feature work or not) is included; so long as it is completed during the quarter's timebox, it is featured on the graph.
@@ -34,7 +34,7 @@
     <tr>
       <td class="tablecell"><a  
         href="javascript:void(0)"  
-        onclick="Rally.launchApp('ZzacksWeeklyThroughputDashboardApp')" 
+        onclick="launch_app('ZzacksWeeklyThroughputDashboardApp')" 
       >Weekly Throughput Dashboard</a></td>
       <td class="tablecell">
         This page's graph shows the number of artifacts that are completed each week for the trailing 52 weeks. Stories and defects can be counted separately, or added together into one data series.
@@ -43,7 +43,7 @@
     <tr>
       <td class="tablecell"><a  
         href="javascript:void(0)"  
-        onclick="Rally.launchApp('ZzacksScopeChangeDashboardApp')" 
+        onclick="launch_app('ZzacksScopeChangeDashboardApp')" 
       >Scope Change Dashboard</a></td>
       <td class="tablecell">
         WIP
