Feature progress dashboard.

--- a/menus/program.html
+++ b/menus/program.html
@@ -46,7 +46,7 @@
         onclick="launch_app('ZzacksScopeChangeDashboardApp')" 
       >Scope Change Dashboard</a></td>
       <td class="tablecell">
-        WIP
+        This page's table summarizes the change in scope for all features in this release. It can be used not only to track the scope creep of a single feature, but shows the total scope change of all features collectively.
       </td>
     </tr>
   </table>
