--- a/menus/team.html
+++ b/menus/team.html
@@ -12,15 +12,6 @@
     <tr>
       <td class="tablecell"><a
         href="javascript:void(0)\"
-        onclick="Rally.launchApp('ZzacksCumulativeWorkDashboardApp')"
-      >Cumulative Work Dashboard</a></td>
-      <td class="tablecell">
-        WIP
-      </td>
-    </tr>
-    <tr>
-      <td class="tablecell"><a
-        href="javascript:void(0)\"
         onclick="Rally.launchApp('ZzacksAllWorkDashboardApp')"
       >All Work Dashboard</a></td>
       <td class="tablecell">
@@ -34,6 +25,24 @@
       >Weekly Throughput Dashboard</a></td>
       <td class="tablecell">
         This page's graph shows the number of artifacts that are completed each week for the trailing 52 weeks. Stories and defects can be counted separately, or added together into one data series.
+      </td>
+    </tr>
+    <tr>
+      <td class="tablecell"><a
+        href="javascript:void(0)\"
+        onclick="Rally.launchApp('ZzacksCumulativeWorkDashboardApp')"
+      >Cumulative Work Dashboard</a></td>
+      <td class="tablecell">
+        WIP
+      </td>
+    </tr>
+    <tr>
+      <td class="tablecell"><a
+        href="javascript:void(0)\"
+        onclick="Rally.launchApp('ZzacksFeatureProgressDashboardApp')"
+      >Feature Progress Dashboard</a></td>
+      <td class="tablecell">
+        WIP
       </td>
     </tr>
   </table>
