Team progress bugfix.

--- a/menus/team.html
+++ b/menus/team.html
@@ -39,8 +39,8 @@
     <tr>
       <td class="tablecell"><a
         href="javascript:void(0)\"
-        onclick="Rally.launchApp('ZzacksFeatureProgressDashboardApp')"
-      >Feature Progress Dashboard</a></td>
+        onclick="Rally.launchApp('ZzacksTeamProgressDashboardApp')"
+      >Team Progress Dashboard</a></td>
       <td class="tablecell">
         WIP
       </td>
