Add descriptions to the team metrics dashboard menu.

--- a/menus/team.html
+++ b/menus/team.html
@@ -33,7 +33,7 @@
         onclick="Rally.launchApp('ZzacksCumulativeWorkDashboardApp')"
       >Cumulative Work Dashboard</a></td>
       <td class="tablecell">
-        WIP
+        This page shows the total work done for the feature, mapped over time, and split into different categories. The work can be divided either based on artifact type or which feature the artifacts are parented to.
       </td>
     </tr>
     <tr>
@@ -42,7 +42,7 @@
         onclick="Rally.launchApp('ZzacksTeamProgressDashboardApp')"
       >Team Progress Dashboard</a></td>
       <td class="tablecell">
-        WIP
+        This page features several different views that allow a team to evaluate the pace at which they're getting work done. Planned work completion is mapped over time, and compared to the ideal perfect pace. The total work done is also compared against capacity for each iteration.
       </td>
     </tr>
   </table>
