Added the features complete dashboard.

--- a/menus/program.html
+++ b/menus/program.html
@@ -49,5 +49,12 @@
         This page's table summarizes the change in scope for all features in this release. It can be used not only to track the scope creep of a single feature, but shows the total scope change of all features collectively.
       </td>
     </tr>
+    <tr>
+      <td class="tablecell"><a  
+        href="javascript:void(0)"  
+        onclick="launch_app('ZzacksFeatureCompleteDashboardApp')" 
+      >Feature Complete Dashboard</a></td>
+      <td class="tablecell">WIP</td>
+    </tr>
   </table>
 </div>
