Ship the feature complete dashboard.

--- a/menus/program.html
+++ b/menus/program.html
@@ -54,7 +54,9 @@
         href="javascript:void(0)"  
         onclick="launch_app('ZzacksFeatureCompleteDashboardApp')" 
       >Feature Complete Dashboard</a></td>
-      <td class="tablecell">WIP</td>
+      <td class="tablecell">
+        This page shows the progress of all the features in the current release. Their progress by stories and points are shown, and a summary table at the top reports the overall current progress of all the features in the release.
+      </td>
     </tr>
   </table>
 </div>
