--- a/menus/team.html
+++ b/menus/team.html
@@ -45,5 +45,14 @@
         This page features several different views that allow a team to evaluate the pace at which they're getting work done. Planned work completion is mapped over time, and compared to the ideal perfect pace. The total work done is also compared against capacity for each iteration.
       </td>
     </tr>
+    <tr>
+      <td class="tablecell"><a  
+        href="javascript:void(0)"  
+        onclick="Rally.launchApp('ZzacksFeatureCompleteDashboardApp')" 
+      >Feature Complete Dashboard</a></td>
+      <td class="tablecell">
+        This page shows the progress of all the features in the current release. Their progress by stories and points are shown, and a summary table at the top reports the overall current progress of all the features in the release.
+      </td>
+    </tr>
   </table>
 </div>
